--- a/src/Home.css
+++ b/src/Home.css
@@ -20,6 +20,7 @@ body{
     background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
     color: white;
     opacity: 0.95;
+    box-shadow: 5px 10px 3px lightgrey;
 }
 
 .home-header-container h1{
@@ -40,7 +41,7 @@ body{
 
 .home-header-button:hover{
     color: black;
-    border-bottom: 1px solid black;
+
 }
 
 .project-container{
