--- a/src/components/Squad.css
+++ b/src/components/Squad.css
@@ -1,5 +1,8 @@
+.squad-header{
+  text-align: center;
+}
 .squad-title{
-    text-align: center;
+    margin-top: 100px;
 }
 .squad-image-container {
   width: 100%;
@@ -8,9 +11,12 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  
 }
 .project-screenshot {
   flex: 1;
   align-self: center;
   width: 900px;
+  box-shadow: 5px 10px 3px black;
+  margin-bottom: 50px;
 }
