--- a/src/components/learnjs/Learnjs.css
+++ b/src/components/learnjs/Learnjs.css
@@ -50,8 +50,9 @@
   .learnjs-description ul{
     list-style: none;
     padding-left: 0;
+    font-family: 'Open Sans', sans-serif;
   }
-  .learnjs-description{
+  .learnjs-description p, li, h4{
     font-size: 19px;
-    /* font-family: 'Open Sans', sans-serif; */
+    font-family: 'Open Sans', sans-serif;
   }
