--- a/src/Home.css
+++ b/src/Home.css
@@ -2,6 +2,11 @@
     font-family: 'Asap', sans-serif;
     /* font-family: 'Open Sans', sans-serif; */
     box-sizing: border-box;
+    
+}
+
+html{
+    background-color:  #FAFAFA;
 }
 
 body{
@@ -92,13 +97,12 @@ body{
 
 .project-holder-page{
     align-self: center;
-    width: 300px;
+    width: 100px;
     /* margin-top: 50px; */
     /* display: inline-block; */
     flex: 1;
     box-shadow: 5px 10px 3px lightgrey;
-    margin: 10px;
-    margin-top: 60px;
+    margin: 60px;
 }
 
 
