--- a/src/Home.css
+++ b/src/Home.css
@@ -1,126 +1,139 @@
-*{
-    font-family: 'Asap', sans-serif;
-    /* font-family: 'Open Sans', sans-serif; */
-    box-sizing: border-box;
-    
+* {
+  /* font-family: 'Asap', sans-serif; */
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: 'Francois One', sans-serif;
+  box-sizing: border-box;
 }
 
-html{
-    background-color:  #FAFAFA;
+html {
+  background-color: #fafafa;
 }
 
-body{
-    margin: 0px;
-    /* background-color: #95B1C4; */
+body {
+  margin: 0px;
+  /* background-color: #95B1C4; */
 }
 
-.home-header-container{
-    text-align: center;
-    margin: auto;
-    color: #f3f3f3;
-    font-size: 30px;
-    font-weight: 550;
-    padding-top: 33px;
-    height: 250px;
-    width: 100%;
-    /* background-color: #1fc8db;
-    background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%); */
-    background-color: #63ADF2;
-    color: white;
-    opacity: 0.95;
-    box-shadow: 5px 10px 3px lightgrey;
+.home-header-container {
+  text-align: left;
+  margin: auto;
+  font-size: 50px;
+  font-weight: 550;
+  padding-top: 33px;
+  height: 250px;
+  width: 45%;
+  color: black;
+  opacity: 0.95;
 }
 
-.home-header-container h1{
-    font-size: 1.25em;
+.name-andrew{
+    color: rgb(107, 176, 242);
 }
 
-.home-nav-bar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-.home-header-button{
+.header-blurb{
     font-size: 18px;
-    margin: 0 10px;
-    margin-top: 40px; 
+    margin-top: 0;
+}
 
-    /* border: none;
+.home-header-container h1 {
+  font-size: 80px;
+  margin-bottom: 0;
+}
+
+.home-nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-bar{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+
+.home-header-button {
+  font-size: 18px;
+  margin: 15px 20px 0; 
+
+
+  /* border: none;
     background: none;
     color: #545E75;
     */
 }
-.home-nav-bar a{
-    text-decoration: none;
-    color: white;
+.home-nav-bar a {
+  text-decoration: none;
+  color: black;
 }
-.home-header-button:hover{
-    color: rgba(156, 41, 233, 0.712);
-}
-
-.project-container{
-    width: 50%;
-    margin: auto;
-    margin-top: 103px;
-    /* text-align: center; */
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-}
-.project-holder{
-    align-self: center;
-    width: 300px;
-    /* margin-top: 50px; */
-    /* display: inline-block; */
-    flex: 1;
-    box-shadow: 5px 10px 3px lightgrey;
-    margin: 10px;
-
-    -webkit-filter: brightness(100%);
-	-moz-filter: brightness(100%);
-	-o-filter: brightness(100%);
-	-ms-filter: brightness(100%);
-	filter: brightness(100%);
-
+.home-header-button:hover {
+  color: rgba(156, 41, 233, 0.712);
 }
 
-.project-holder:hover{
-    -webkit-filter: brightness(70%);
-	-moz-filter: brightness(70%);
-	-o-filter: brightness(70%);
-	-ms-filter: brightness(70%);
-	filter: brightness(70%);
+.project-container {
+  width: 66%;
+  margin: auto;
+  margin-top: 150px;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.project-holder {
+  align-self: center;
+  width: 375px;
+  /* margin-top: 50px; */
+  /* display: inline-block; */
+  flex: 1;
+  box-shadow: 5px 10px 3px lightgrey;
+  margin: 20px;
+
+  -webkit-filter: brightness(100%);
+  -moz-filter: brightness(100%);
+  -o-filter: brightness(100%);
+  -ms-filter: brightness(100%);
+  filter: brightness(100%);
 }
 
-.project-holder-page{
-    align-self: center;
-    width: 100px;
-    /* margin-top: 50px; */
-    /* display: inline-block; */
-    flex: 1;
-    box-shadow: 5px 10px 3px lightgrey;
-    margin: 60px;
+.project-holder:hover {
+  -webkit-filter: brightness(70%);
+  -moz-filter: brightness(70%);
+  -o-filter: brightness(70%);
+  -ms-filter: brightness(70%);
+  filter: brightness(70%);
 }
 
-
-footer{
-    margin-top: 100px;
-    /* background-color: #B3E6EF; */
-    background-color: lightgray;
-    height: 100px;
-    display: flex;
-    justify-content: center;
+.project-holder-page {
+  align-self: center;
+  width: 100px;
+  /* margin-top: 50px; */
+  /* display: inline-block; */
+  flex: 1;
+  box-shadow: 5px 10px 3px lightgrey;
+  margin: 60px;
 }
 
-.logo{
-    width: 30px;
-    margin: 10px;
-    margin-top: 40px;
+footer {
+  margin-top: 100px;
+  /* background-color: #B3E6EF; */
+  background-color: lightgray;
+  height: 100px;
+  display: flex;
+  justify-content: center;
 }
 
-.blurb-container{
-    display: flex;
+.logo {
+  width: 30px;
+  margin: 10px;
+  margin-top: 40px;
+}
+
+.blurb-container {
+  display: flex;
+}
+
+.header-blurb{
+    color: lightslategray;
+
 }
