updated project pages with new header

--- a/src/components/learnjs/Learnjs.css
+++ b/src/components/learnjs/Learnjs.css
@@ -1,5 +1,8 @@
 .learnjs-header{
-    text-align: center;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 25px;
+  color: lightslategray;
   }
   .learnjs-title{
       margin-top: 100px;
