--- a/src/Home.css
+++ b/src/Home.css
@@ -137,3 +137,21 @@ footer {
     color: lightslategray;
 
 }
+
+@media only screen and (max-width: 900px){
+  .home-header-container{
+    width: 80%;
+  }
+  .home-header-container h1{
+    font-size: 60px;
+  }
+  .project-holder{
+    width: 250px;
+  }
+  .nav-bar{
+    display: flex;
+    justify-content: center;
+    margin-right: 20px;
+}
+
+}
