--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -44,3 +44,14 @@ a{
   background-color: lightgray;
   margin-top: 175px;
 }
+
+@media only screen and (max-width: 900px){
+  .contact-container {
+    display: block;
+    text-align: center;
+
+  }
+  .contact-container ul{
+    text-align: left;
+  }
+}
