--- a/src/components/petful/Petful.css
+++ b/src/components/petful/Petful.css
@@ -60,3 +60,33 @@ h5 {
   font-size: 19px;
   font-family: "Open Sans", sans-serif;
 }
+@media only screen and (max-width: 900px) {
+  .petful-image-container {
+    width: 74%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .project-screenshot {
+    flex: 1;
+    align-self: center;
+    max-width: 100%;
+    box-shadow: 5px 10px 3px black;
+    margin-bottom: 50px;
+  }
+  .petful-header h1 {
+    font-size: 40px;
+  }
+  .petful-description p,
+  ul li,
+  h4 {
+    font-size: 15px;
+    font-family: "Open Sans", sans-serif;
+  }
+  .petful-description {
+    width: 65%;
+    margin: auto;
+  }
+}
