fixed width of about section text for mobile

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -18,3 +18,10 @@
 .about-section p{
   font-family: 'Open Sans', sans-serif;
 }
+@media only screen and (max-width: 900px){
+  .about-section{
+    text-align: left;
+    width: 84%;
+    margin: auto;
+  }
+}
