--- a/src/components/learnjs/Learnjs.css
+++ b/src/components/learnjs/Learnjs.css
@@ -55,9 +55,9 @@
   font-family: "Open Sans", sans-serif;
 }
 .learnjs-description p,
-li,
+ul li,
 h4 {
-  font-size: 19px;
+  font-size: 16px;
   font-family: "Open Sans", sans-serif;
 }
 @media only screen and (max-width: 900px) {
