--- a/src/components/petful/Petful.css
+++ b/src/components/petful/Petful.css
@@ -55,9 +55,9 @@
   font-family: "Open Sans", sans-serif;
 }
 .petful-description p,
-li,
+ul li,
 h5 {
-  font-size: 19px;
+  font-size: 16px;
   font-family: "Open Sans", sans-serif;
 }
 @media only screen and (max-width: 900px) {
