--- a/src/components/prefcards/Prefcards.css
+++ b/src/components/prefcards/Prefcards.css
@@ -57,9 +57,9 @@
   font-family: "Open Sans", sans-serif;
 }
 .prefcards-description p,
-li,
+ul li,
 h4 {
-  font-size: 19px;
+  font-size: 16px;
   font-family: "Open Sans", sans-serif;
 }
 @media only screen and (max-width: 900px) {
