--- a/src/components/squad/Squad.css
+++ b/src/components/squad/Squad.css
@@ -56,9 +56,9 @@
   font-family: "Open Sans", sans-serif;
 }
 .squad-description p,
-li,
+ul li,
 h4 {
-  font-size: 19px;
+  font-size: 16px;
   font-family: "Open Sans", sans-serif;
 }
 @media only screen and (max-width: 900px) {
