added max width to body styles

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,6 +12,8 @@ html {
 body {
   margin: 0px;
   /* background-color: #95B1C4; */
+  max-width: 1500px;
+  margin: auto;
 }
 
 .home-header-container {
