--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+#root {
+  position: relative;
+  padding-bottom: 100px;
+  min-height: 100vh;
+}
+
 html {
   background-color: #fafafa;
 }
@@ -24,7 +30,7 @@ body {
   width: 45%;
   color: black;
   opacity: 0.95;
-  animation: fadeIn 1s;
+  /* animation: fadeIn 1s; */
 }
 
 .name-andrew{
@@ -84,12 +90,12 @@ body {
   width: 50%;
   margin: auto;
   margin-top: 150px;
-  /* text-align: center; */
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  animation: fadeIn 2s;
+  text-align: center;
+  /* animation: fadeIn 2s; */
   
 }
 .project-holder {
@@ -127,12 +133,18 @@ body {
 }
 
 footer {
-  margin-top: 100px;
-  /* background-color: #B3E6EF; */
-  background-color: lightgray;
-  height: 100px;
-  display: flex;
-  justify-content: center;
+    /* margin-top: 170px; */
+    /* background-color: #B3E6EF; */
+    background-color: lightgray;
+    height: 100px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
 }
 
 .logo {
